# soon2021

./: CMakeLists.txt  Makefile  Readme.md  config.json  test.py
extras/MqttClient.Flutter/: pubspec.yaml
extras/MqttClient.Flutter/android/app/: build.gradle
extras/MqttClient.Flutter/android/app/src/main/: AndroidManifest.xml
extras/MqttClient.Flutter/android/app/src/main/kotlin/org/soon/flutter_mqtt/: MainActivity.kt
extras/MqttClient.Flutter/android/app/src/profile/: AndroidManifest.xml
extras/MqttClient.Flutter/ios/Runner/: Info.plist
extras/MqttClient.Flutter/ios/Runner.xcodeproj/: project.pbxproj
extras/MqttClient.Flutter/lib/: main.dart
extras/MqttClient.Flutter/lib/mqttFactory/: mqttClientBase.dart  mqttClientBrowser.dart  mqttClientFactory.dart  mqttClientServer.dart
extras/MqttClient.Flutter/web/: index.html
extras/mqtt_unity_webgl/: index.html  readme.txt
src/: agent.h  agent_config.cpp  agent_config.h  agent_mqtt.cpp  agent_plugin.h  agent_temp.cpp  agent_test.cpp  main.cpp  main.unix.cpp  main.windows.cpp
src/agent/: ExecAgent.cpp  MqttAgent.cpp  TempAgent.cpp  TestAgent.cpp  agent_exec.cpp  agent_mqtt.cpp  agent_temp.cpp  agent_test.cpp
src/core/: agent_config.cpp  agent_config.h
